--- a/src/style.scss
+++ b/src/style.scss
@@ -1,49 +1,162 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
-html,
-body,
-#root {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-height: 100%;
+/* RESETS
+=========================================== */
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+*::selection {
+  background: #ff5e57;
+  color: white;
+}
+
 body {
-  width: 100%;
-  margin: 0;
-  font-size: 16px;
+  margin: 20px 0;
+  padding: 0 20px;
+  line-height: 1;
+  font-family: 'Quicksand', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
   color: #414141;
-  // background: ${colors.grey200};
-  font-family: 'Quicksand', sans-serif;
+  background-color: rgb(240, 243, 244);
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  * {
-    box-sizing: border-box;
-    &::selection {
-      background: #ff5e57;
+/* POKEMON APPLICATION
+=========================================== */
+
+.container {
+  margin: auto;
+  display: flex;
+  max-width: 800px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  p {
+    margin: 0;
+  }
+
+  .pokemon {
+    display: flex;
+    flex-direction: column;
+    width: 49%;
+    background-color: #fff;
+    background-clip: border-box;
+    // border: 1px solid rgba(0, 0, 0, 0.125);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(231, 238, 243);
+    border-radius: 6px;
+    box-shadow: rgba(52, 61, 68, 0.1) 0px 1px 2px;
+    overflow: hidden;
+    margin-bottom: 20px;
+
+    &:hover {
+      box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 30px -10px;
+      transition: all 400ms ease 0s;
+    }
+  }
+
+  .pokemon__name {
+    background-color: #ecd018;
+    text-align: center;
+    padding: 10px;
+
+    h1 {
+      text-transform: uppercase;
+      font-weight: bold;
       color: white;
+      letter-spacing: 4px;
+      font-size: 3rem;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+    }
+  }
+
+  .pokemon__image {
+    padding: 20px;
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
+  .pokemon__attacks {
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: space-between;
+
+    span {
+      width: 30%;
+      background-color: #f16820;
+      border-radius: 3px;
+      padding: 7px;
+      font-weight: 700;
+      color: #fff;
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 12px;
+      margin-bottom: 10px;
+      word-wrap: break-word;
+      text-align: center;
+      line-height: 15px;
+    }
+  }
+
+  .pokemon__meta {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 0 10px;
+
+    span {
+      color: white;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+      background-color: #7bb7b7;
+      font-weight: bold;
+      margin: 0;
+      padding: 5px 20px;
+      border-radius: 5px;
+      text-align: center;
     }
   }
 }
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
+@media (max-width: 800px) {
+  .container .pokemon {
+    width: 100%;
+  }
 }
 
-.pokemon {
-  padding: 5em;
-  text-align: center;
+@media (max-width: 400px) {
+  .container .pokemon__attacks,
+  .container .pokemon__meta {
+    flex-wrap: wrap;
+  }
 
-  ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    background: #f5f5f5;
-    border-bottom: 2px solid #dddddd;
-    li {
-      padding: 0.75em;
-    }
+  .container .pokemon__meta span,
+  .container .pokemon__attacks span,
+  .container .pokemon {
+    width: 100%;
+  }
+
+  .container .pokemon__meta span {
+    margin-bottom: 10px;
   }
 }
